fix: hamburger icon visible in dark mode

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+/* Hamburger icon visible in dark mode */
+body.dark-mode .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(248,249,250,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
 /* Animasi Fade-in dan Slide-up */
 .animate {
   opacity: 0;
